--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'blocks/reviews'
 // Подключение стилей для блока activities
 @import 'blocks/activities'
+// Подключение стилей для подвала
+@import 'blocks/footer'
 // Подключение стилей для адаптива
 @import 'media'
