--- a/css/style.css
+++ b/css/style.css
@@ -1531,6 +1531,7 @@ template {
 }
 
 .footer__icon {
+  margin-left: 8px;
   max-width: 18px;
   margin-right: 20px;
 }
@@ -1655,6 +1656,13 @@ template {
     width: 230px;
     height: 230px;
   }
+  .footer__legal {
+    margin-left: 20px;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 @media (max-width: 992px) {
@@ -1768,7 +1776,7 @@ template {
     right: 0;
   }
   .activities {
-    padding-bottom: 70px;
+    padding-bottom: 50px;
   }
   .activities-wrapper {
     -ms-flex-wrap: wrap;
@@ -1781,6 +1789,79 @@ template {
     width: 339px;
     height: 255px;
     padding-right: 16%;
+  }
+  .footer {
+    padding-top: 73px;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-row-gap: 40px;
+  }
+  .footer__legal {
+    margin-left: 0;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    width: 104px;
+    height: 110px;
+    margin-bottom: 10px;
+  }
+  .footer__title-contact {
+    margin-bottom: 25px;
+  }
+  .footer__social-network {
+    margin-top: 5px;
+    margin-left: 60px;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: span 4;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .footer__categories {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    grid-column: span 2;
+    margin-bottom: 13px;
+  }
+  .footer__additional {
+    margin-left: -50px;
+    grid-column: span 2;
+  }
+  .footer__legal {
+    margin-left: 15px;
+    grid-column: span 2;
+  }
+  .footer__contact-details {
+    grid-column: span 5;
+    -ms-grid-row: 3;
+    grid-row: 3;
+  }
+  .footer__contact-form {
+    max-width: 540px;
+    grid-column: span 5;
+    -ms-grid-row: 4;
+    grid-row: 4;
+    margin-bottom: 15px;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 47%;
+        flex-basis: 47%;
+  }
+  .footer__informations {
+    grid-column: span 6;
+    max-height: 22px;
+  }
+  .footer__rules {
+    margin-left: 0;
   }
 }
 
@@ -1967,6 +2048,19 @@ template {
     width: 48%;
     height: 250px;
   }
+  .footer {
+    padding-top: 69px;
+  }
+  .footer__additional {
+    margin-left: -10px;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .footer__social-network {
+    margin-left: 10px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -2052,6 +2146,116 @@ template {
   .card {
     width: 100%;
     height: 255px;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-row-gap: 30px;
+    grid-column-gap: 0;
+  }
+  .footer__title-categories {
+    margin-bottom: 20px;
+  }
+  .footer__title-social {
+    margin-bottom: 20px;
+  }
+  .footer__title-contact {
+    margin-top: 0;
+  }
+  .footer__title-message {
+    margin-bottom: 15px;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    margin-bottom: 10px;
+  }
+  .footer__social-network {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 0;
+    margin-left: 0;
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__legal {
+    margin-left: 0;
+    -ms-grid-row: 3;
+    grid-row: 3;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__additional {
+    margin-left: 0;
+    -ms-grid-row: 4;
+    grid-row: 4;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__categories {
+    -ms-grid-row: 5;
+    grid-row: 5;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 6;
+    grid-row: 6;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    margin-bottom: 10px;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 7;
+    grid-row: 7;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    margin-bottom: 0;
+  }
+  .footer__icon {
+    margin-left: 0;
+    margin-right: 10px;
+  }
+  .footer__icon-wrapper {
+    max-width: 30px;
+    min-width: 30px;
+  }
+  .footer__btr-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .footer__message {
+    margin-bottom: 0;
+  }
+  .footer__info {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .footer__informations {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .footer__rules {
+    margin-bottom: 10px;
   }
 }
 
