--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,6 +11,11 @@
   .card
     width: 230px
     height: 230px
+  .footer
+    &__legal
+      margin-left: 20px
+    &__input
+      flex-basis: 100%
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 700px
@@ -56,18 +61,14 @@
   .map
     width: 340px
     max-height: 210px
-
   .packages
     padding-bottom: 60px
     &__title
       margin-bottom: 55px
     &-wrapper
-      // grid-template-columns: repeat(2, 1fr)
-      // grid-template-rows: repeat(3, 500px)
       grid-template-columns: 1fr 1fr
       grid-template-rows: 500px 500px 500px
       gap: 15px
-  
   .newsletter
     padding-top: 92px
     padding-bottom: 93px
@@ -92,7 +93,7 @@
         &--next
           right: 0
   .activities
-    padding-bottom: 70px
+    padding-bottom: 50px
     &-wrapper
       flex-wrap: wrap
     &__card
@@ -101,7 +102,55 @@
     width: 339px
     height: 255px
     padding-right: 16%
-
+  .footer
+    padding-top: 73px
+    &-wrapper
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr  
+      grid-row-gap: 40px
+    &__legal
+      margin-left: 0
+    &__logo
+      grid-row: 1 / 2
+      grid-column: 1
+      width: 104px
+      height: 110px
+      margin-bottom: 10px
+    &__title
+      &-contact
+        margin-bottom: 25px
+    &__social
+      &-network
+        margin-top: 5px
+        margin-left: 60px
+        grid-row: 1 / 2
+        grid-column: span 4
+        align-self: center
+    &__categories
+      grid-row: 2 / 3
+      grid-column: span 2
+      margin-bottom: 13px
+    &__additional
+      margin-left: -50px
+      grid-column: span 2
+    &__legal
+      margin-left: 15px
+      grid-column: span 2
+    &__contact
+      &-details
+        grid-column: span 5
+        grid-row: 3
+      &-form
+        max-width: 540px
+        grid-column: span 5
+        grid-row: 4
+        margin-bottom: 15px
+    &__input
+      flex-basis: 47%
+    &__informations
+      grid-column: span 6
+      max-height: 22px
+    &__rules
+      margin-left: 0
 @media (max-width: 767px)
   .container
     max-width: 576px
@@ -159,14 +208,12 @@
     width: 100%
   .map
     width: 100%
-
   .packages
     &__title
       font-size: 30px
       margin-bottom: 45px
     &-wrapper  
       grid-template-columns: 100%
-      // grid-template-rows: 1fr repeat(4, 480px)
       grid-template-rows: 1fr 480px 480px 480px 480px
   .package
     display: grid
@@ -227,6 +274,15 @@
   .card
     width: 48%
     height: 250px
+  .footer
+    padding-top: 69px
+    &__additional
+      margin-left: -10px
+    &__input
+      flex-basis: 100%
+    &__social
+      &-network
+        margin-left: 10px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -286,7 +342,73 @@
   .card
     width: 100%
     height: 255px
-
+  .footer
+    &-wrapper
+      grid-template-columns: 1fr
+      grid-row-gap: 30px
+      grid-column-gap: 0
+    &__title
+      &-categories
+        margin-bottom: 20px
+      &-social
+        margin-bottom: 20px
+      &-contact
+        margin-top: 0
+      &-message
+        margin-bottom: 15px
+    &__logo
+      grid-row: 1
+      grid-column: 1
+      margin-bottom: 10px
+    &__social
+      &-network
+        display: flex
+        flex-direction: column
+        margin-top: 0
+        margin-left: 0
+        grid-row: 2
+        grid-column: 1
+    &__legal
+      margin-left: 0
+      grid-row: 3
+      grid-column: 1
+    &__additional
+      margin-left: 0
+      grid-row: 4
+      grid-column: 1
+    &__categories
+      grid-row: 5
+      grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+        margin-bottom: 10px
+      &-form
+        grid-row: 7
+        grid-column: 1
+        margin-bottom: 0
+    &__icon
+      margin-left: 0
+      margin-right: 10px
+      &-wrapper
+        max-width: 30px
+        min-width: 30px
+    &__btr-info
+      display: flex
+      flex-direction: column-reverse
+    &__message
+      margin-bottom: 0
+    &__info
+      padding-top: 15px
+      padding-bottom: 15px
+    &__informations
+      flex-direction: column
+      align-items: start
+    &__rules
+      margin-bottom: 10px
+    
+      
 @media (max-width: 320px)
   .container
     max-width: 280px
