--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -81,6 +81,7 @@
     text-decoration: none
     color: inherit
   &__icon
+    margin-left: 8px
     max-width: 18px
     margin-right: 20px
     &-wrapper
