--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -155,9 +155,54 @@
   .container
     max-width: 576px
     width: 92%
+  body
+    padding-top: 78px
   .navbar
-    &__search, &__user, &-menu
+    &__mobile
+      &_fixed
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        z-index: 99
+        overflow: scroll
+    &__user
+      &_mobile
+        &_hidden
+          display: none
+        &_visible
+          display: flex
+    &__search
+      &_mobile
+        &_hidden
+          display: none
+        &_visible
+          display: flex
+          width: 245px
+          margin-left: 0
+          margin-bottom: 20px
+    &__user
+      flex-direction: column
+    &-bottom
       display: none
+      position: fixed
+      left: 0
+      right: 0
+      bottom: 0
+      top: 78px
+      padding-top: 31px
+      &--visible
+        display: block
+    &-menu
+      padding-top: 0
+      flex-direction: column
+      align-items: center
+      &__item
+        margin-bottom: 20px
+        &_mobile
+          &_visible
+            display: block
+            justify-content: center
   .menu
     &-button
       padding: 0
@@ -174,6 +219,12 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .user
+    &__name
+      &_light
+        color: $light
+        margin-left: 0
+        margin-top: 10px
   .hotel
     padding-bottom: 40px
     &-about
