--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -25,6 +25,10 @@
       font-size: 14px
       line-height: 18px
       font-weight: 600
+    &__item
+      &_mobile
+        &_visible
+          display: none
 .logo
   width: 177px
 .search
@@ -66,6 +70,7 @@
     margin-left: 18px
     font-size: 14px
     line-height: 18px
+
 
     
     
